@@ -1,3 +1,8 @@
+2013-02-06  Niels Möller  <nisse@lysator.liu.se>
+
+	* asm.m4: Use changecom to disable m4 quoting. Use divert to
+	suppress output.
+
 2013-02-05  Niels Möller  <nisse@lysator.liu.se>
 
 	* testsuite/rsa-keygen-test.c (test_main): Updated expected
